# Unrender

./: .env.example  .gitignore  CHANGELOG.md  README.md  modal_train.py  pyproject.toml
data/synthetic_v0/: README.md  test.jsonl  val.jsonl
data/synthetic_v1/: README.md  test.jsonl  val.jsonl
outputs/eval_reports/: COMPARISON.md
outputs/eval_reports/anthropic__claude-fable-5/: FAILURES.md  meta.json  predictions.jsonl  report.json
outputs/eval_reports/gemini__gemini-3.1-pro-preview/: FAILURES.md  meta.json  predictions.jsonl  report.json
outputs/eval_reports/openai__gpt-5.5/: FAILURES.md  meta.json  predictions.jsonl  report.json
outputs/eval_v1/: COMPARISON.md
outputs/eval_v1/anthropic__claude-fable-5/: FAILURES.md  meta.json  predictions.jsonl  report.json
outputs/eval_v1/gemini__gemini-3.1-pro-preview/: FAILURES.md  meta.json  predictions.jsonl  report.json
outputs/eval_v1/openai__gpt-5.5/: FAILURES.md  meta.json  predictions.jsonl  report.json
tests/: test_eval.py  test_smoke.py
unrender/: __init__.py  io_utils.py  prompts.py
unrender/data_gen/: __init__.py  augment.py  chart_specs.py  generate.py  render.py  split_dataset.py
unrender/eval/: __init__.py  dataset.py  failures.py  metrics.py  providers.py  report.py  run_baselines.py  score.py
unrender/schema/: __init__.py  chart_schema.py  json_to_csv.py  validate.py
unrender/train/: sft_lora.py
