[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unrender"
version = "0.1.0"
description = "Un-render charts back into structured data. A specialized VLM for exact chart-to-JSON/CSV extraction."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "ryouol" }]

# Core deps — everything needed to generate synthetic data, validate schemas,
# and run the eval scorer. All CPU-only, installs cleanly on Apple Silicon.
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pillow>=10.0",
    "pydantic>=2.5",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# Frontier-model benchmarking + fuzzy label matching for the scorer.
eval = [
    "rapidfuzz>=3.6",
    "python-dotenv>=1.0",
    "openai>=1.30",
    "anthropic>=0.34",
    "google-genai>=0.3",
]
# Phase 3 LoRA fine-tune (Qwen3-VL via Unsloth). CUDA-only — install on the
# rented GPU box, NOT Apple Silicon. torch is provided by the box's CUDA image.
train = [
    "unsloth",
    "trl>=0.9",
    "peft>=0.11",
    "bitsandbytes>=0.43",
    "transformers>=4.46",
    "accelerate>=0.34",
    "datasets>=2.20",
]
# Demo + API. pdf2image needs `brew install poppler`.
app = [
    "gradio>=4.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pymupdf>=1.24",
    "pdf2image>=1.17",
]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["unrender*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
